add creating of user, getting tours by id