@@ -4,6 +4,8 @@ import com.neotour.dto.TourDto;
 import com.neotour.entity.Image;
 import com.neotour.entity.Tour;
 
+import java.util.stream.Collectors;
+
 public class TourMapper {
     public static TourDto mapToTourDto(Tour tour) {
         return new TourDto(
@@ -14,7 +16,7 @@ public class TourMapper {
                 tour.getLocation().getLocation(),
                 tour.getLocation().getCountry(),
                 tour.getImages().stream().map(Image::getUrl).toList(),
-                tour.getReviews().stream().map(ReviewMapper::mapToReviewDto).toList()
+                tour.getReviews().stream().map(ReviewMapper::mapToReviewDto).collect(Collectors.toList())
         );
     }
 }
